--- a/000-default.conf
+++ b/000-default.conf
@@ -1,15 +1,27 @@
+# <VirtualHost *:80>
+# # 1. Set the Document Root to the public folder (the only public-facing directory)
+# DocumentRoot /app/public
+
+# <Directory /app/public>
+#     # Allow .htaccess files to override settings
+#     AllowOverride All
+#     # Require all users to access this directory
+#     Require all granted
+# </Directory>
+
+# # Log file locations
+# ErrorLog ${APACHE_LOG_DIR}/error.log
+# CustomLog ${APACHE_LOG_DIR}/access.log combined
+# </VirtualHost>
+
 <VirtualHost *:80>
-# 1. Set the Document Root to the public folder (the only public-facing directory)
-DocumentRoot /app/public
+    DocumentRoot /var/www/html/public
 
-<Directory /app/public>
-    # Allow .htaccess files to override settings
-    AllowOverride All
-    # Require all users to access this directory
-    Require all granted
-</Directory>
+    <Directory /var/www/html/public>
+        AllowOverride All
+        Require all granted
+    </Directory>
 
-# Log file locations
-ErrorLog ${APACHE_LOG_DIR}/error.log
-CustomLog ${APACHE_LOG_DIR}/access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
