--- a/000-default.conf
+++ b/000-default.conf
@@ -15,6 +15,9 @@
 # </VirtualHost>
 
 <VirtualHost *:80>
+    ServerName petrucodes.ro
+    ServerAlias www.petrucodes.ro
+
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
