--- a/000-default.conf
+++ b/000-default.conf
@@ -1,30 +1,22 @@
-# <VirtualHost *:80>
-# # 1. Set the Document Root to the public folder (the only public-facing directory)
-# DocumentRoot /app/public
-
-# <Directory /app/public>
-#     # Allow .htaccess files to override settings
-#     AllowOverride All
-#     # Require all users to access this directory
-#     Require all granted
-# </Directory>
-
-# # Log file locations
-# ErrorLog ${APACHE_LOG_DIR}/error.log
-# CustomLog ${APACHE_LOG_DIR}/access.log combined
-# </VirtualHost>
-
-<VirtualHost *:80>
+<VirtualHost *:443>
+    # domain name
     ServerName petrucodes.ro
     ServerAlias www.petrucodes.ro
 
+    # root
     DocumentRoot /var/www/html/public
+
+    # use certificate
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/petrucodes.ro/fullchain.pem 
+    SSLCertificateKeyFile /etc/letsencrypt/live/petrucodes.ro/privkey.pem
 
     <Directory /var/www/html/public>
         AllowOverride All
         Require all granted
     </Directory>
 
+    # logs
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
