--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,3 @@
-# services:
-#   app:
-#     build: .
-#     container_name: musiclabel_apache
-#     ports:
-#       - "8080:80"
-#     volumes:
-#       - .:/app
-#     depends_on:
-#       - db
-#     environment:
-#       DB_HOST: db
-#       DB_DATABASE: mydb
-#       DB_USERNAME: myuser
-#       DB_PASSWORD: mypass
-
-#   db:
-#     image: mysql:8.0
-#     container_name: musiclabel_mysql_db
-#     restart: always
-#     environment:
-#       MYSQL_ROOT_PASSWORD: rootpass
-#       MYSQL_DATABASE: mydb
-#       MYSQL_USER: myuser
-#       MYSQL_PASSWORD: mypass
-#     volumes:
-#       - db_data:/var/lib/mysql
-
-# volumes:
-#   db_data:
 services:
   app:
     build: .
@@ -44,10 +14,10 @@ services:
       DB_USERNAME: myuser
       DB_PASSWORD: mypass
     networks:
-      - musiclabel_net
+      - musiclabel_net 
 
     volumes:
-      - /etc/letsencrypt/
+      - /etc/letsencrypt/ #persist the certificate between docker rebuilds
 
   db:
     image: mysql:8.0
