--- a/000-default.conf
+++ b/000-default.conf
@@ -8,8 +8,8 @@
 
     # use certificate
     SSLEngine on
-    SSLCertificateFile /etc/letsencrypt/live/petrucodes.ro/fullchain.pem 
-    SSLCertificateKeyFile /etc/letsencrypt/live/petrucodes.ro/privkey.pem
+    SSLCertificateFile /etc/letsencrypt/live/petrucodes.ro-0001/fullchain.pem 
+    SSLCertificateKeyFile /etc/letsencrypt/live/petrucodes.ro-0001/privkey.pem
 
     <Directory /var/www/html/public>
         AllowOverride All
