--- a/000-default.conf
+++ b/000-default.conf
@@ -1,3 +1,12 @@
+# Apache virtual hosts
+
+<VirtualHost *:80>
+    ServerName petrucodes.ro
+    ServerAlias www.petrucodes.ro
+    Redirect permanent / https://petrucodes.ro/
+</VirtualHost>
+
+
 <VirtualHost *:443>
     # domain name
     ServerName petrucodes.ro
