--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.5",
-        "maantje/charts": "^0.8.1"
+        "maantje/charts": "^0.8.1",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
