--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DB_HOST=db
 DB_DATABASE=mydb
 DB_USERNAME=myuser
 DB_PASSWORD=mypass
+
+SMTP_USER=petru.r.robu@gmail.com
+SMTP_PASS=
+CONTACT_RECEIVER_EMAIL=petru.r.robu@gmail.com
